# CrystalMind

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  config_loader.py  default_config.yaml
crystal_mind/: __init__.py  cli.py  dashboard.py  demo_story.py
crystal_mind/bootstrapping/: __init__.py  minimal_kernel.py
crystal_mind/communication/: __init__.py  hub.py
crystal_mind/core/: __init__.py  category_checker.py  connection.py  differentiable_lambda.py  fiber_bundle.py  manifold.py  snapshot.py
crystal_mind/execution/: __init__.py  photon_scheduler.py  sandbox.py  tool_catalog.py
crystal_mind/measurement/: __init__.py  boundary.py  evaluators.py  thinkcheck_daemon.py
crystal_mind/thinking/: __init__.py  resonance_engine.py  strategy_generator.py
tests/: conftest.py  test_full_cycle.py  test_manifold.py  test_thinkcheck.py
